--- a/style.css
+++ b/style.css
@@ -134,10 +134,10 @@ p {
 .overlayInner {
     height: 100vh;
     min-height: 500px;
-    background-color: rgba(2, 16, 47, 0.79);
+    //background-color: rgba(2, 16, 47, 0.79);
     display: flex;
     flex-direction: column;
-    border: solid 4px black;
+    //border: solid 4px black;
 }
 
 .overlayShow {
@@ -415,7 +415,6 @@ p {
     background-color: transparent;
     outline: none;
     border: none;
-    background-color: rgba(0, 0, 0, 0.05);
 }
 
 .hamburgerMenuScrolled {
@@ -428,23 +427,26 @@ p {
     width: 32px;
     background-color: rgba(23, 46, 96, 0.95);
     border-radius: .75px;
-    margin: 3.5px auto;
+    margin: 4px auto;
 }
+
 
 #physioHelpsWrapper {
     background-color: var(--secondary);
+    clip-path: polygon(100% 0, 100% 95%, 35% 100%, 0% 95%, 0 0);
 }
 
 .physioHelps {
     text-align: center;
-    padding: 30px 20px;
+    padding: 40px;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
 #physioHelpsWrapper .line {
-    background-color: white;
+    background-color: var(--ultraDarkColour);
+    margin: .5rem 0 .8rem 0;
 }
 
 .sectionImagePadding {
@@ -462,14 +464,12 @@ p {
 .physioHelpsCards {
     display: flex;
     flex-direction: column;
-    gap: 2.5rem;
+    gap: 3rem;
     margin: 2rem 0;
-    padding: 0 1rem;
 }
 
 .physioHelpsCard {
     color: black;
-    padding: 1.2rem;
     text-align: center;
     font-family: Montserrat;
     //box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 15px -3px, rgba(0, 0, 0, 0.02) 0px 4px 6px -2px;
@@ -478,6 +478,8 @@ p {
     max-width: 400px;
 
     //border: solid 1px #f2f2f2;
+
+    text-align: left;
 }
 
 .physioHelpsCardHeadline {
@@ -621,9 +623,10 @@ p {
     bottom: 0;
     color: white;
 
-    font-size: 1rem;
-    padding: 14px;
+    font-size: 1.1rem;
+    padding: 8px;
     width: 100%;
+    line-height: 1.6rem;
 }
 
 .sectionRight {
