--- a/tablet.css
+++ b/tablet.css
@@ -175,6 +175,7 @@
         width: 80%;
         margin: 4rem auto 0 auto;
         max-width: 1400px;
+        text-align: left;
     }
 
     .physioHelpsCard {
