--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --primary: white;
-    --secondary: #fbfbfb;
+    --secondary: #f8f8f8;
     --mainColour: #0071C7;
     --darkColour: #172E60;
     --ultraDarkColour: #0b214f;
@@ -97,6 +97,7 @@ p {
     margin: .5rem 0;
     text-align: left;
     max-width: 500px;
+    font-weight: 500;
 }
 
 .smallText {
@@ -330,6 +331,19 @@ p {
     margin: 1.2rem 0;
 }
 
+.moreButton {
+    padding: 10px 15px;
+    width: fit-content;
+    font-size: 1.1rem;
+    background-color: var(--darkColour);
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    margin: 30px 0;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.19);
+}
+
 .headerContactWrapper {
     display: none;
 }
@@ -438,7 +452,7 @@ p {
 
 .physioHelps {
     text-align: center;
-    padding: 40px;
+    padding: 30px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -491,7 +505,7 @@ p {
 
 .physioHelpsCardText {
     font-size: 1rem;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.5rem;
 }
 
