--- a/tablet.css
+++ b/tablet.css
@@ -34,12 +34,9 @@
     }
 
     h5 {
-        color: var(--darkColour);
-        font-family: 'Unbounded', sans-serif;
-        font-family: "Poppins", sans-serif;
         font-size: 3rem;
         line-height: 3.5rem;
-        font-weight: 400;
+        font-weight: 700;
         text-align: left;
     }
 
@@ -47,6 +44,7 @@
         text-align: left;
         margin: 0 auto;
         max-width: 800px;
+        color: var(--ultraDarkColour);
     }
 
     .smallText {
@@ -73,7 +71,7 @@
         background-image: none;
         height: 100vh;
         min-height: 500px;
-        max-height: 700px;
+        max-height: 800px;
     }
 
     .headerPictureCollection {
@@ -105,7 +103,6 @@
 
     #header {
         position: relative;
-        width: 100%;
         align-items: center;
         background-size: cover;
     }
@@ -117,6 +114,7 @@
         height: 100%;
 
         display: flex;
+        gap: 4rem;
     }
 
     #header-left {
@@ -132,7 +130,6 @@
         width: 50%;
         display: flex;
         align-items: center;
-        justify-content: center;
     }
 
     #header_headlineWrapper {}
@@ -164,6 +161,7 @@
     .physioHelps {
         width: 80%;
         margin: 0 auto;
+        padding: 0;
     }
 
     .physioHelps .smallText {
@@ -208,12 +206,12 @@
     }
 
     .newLeistungenRight {
-        width: 80%;
+        width: 50%;
         margin: 0 auto;
     }
 
     .newLeistungenLeft {
-        width: 80%;
+        width: 50%;
         margin: 0 auto;
     }
 
@@ -270,9 +268,8 @@
 
     .leistungenRightGrid {
         display: grid;
-        gap: 50px;
+        gap: 40px;
         grid-template-columns: auto auto;
-        padding: 0 3rem;
     }
 
     .aboutMeTextBox {
