--- a/style.css
+++ b/style.css
@@ -277,7 +277,9 @@ p {
     margin: 0 auto;
 }
 
-#header-left {}
+#header-left {
+    padding: 10px;
+}
 
 #header-left img {
     width: 100%;
@@ -285,10 +287,7 @@ p {
     object-fit: cover;
     object-position: 0 0;
     display: block;
-    width: 300px;
-    margin: 30px auto 0 auto;
-    border-radius: 50%;
-    height: 300px;
+    margin: 0 auto 0 auto;
 }
 
 .information {
