--- a/desktop.css
+++ b/desktop.css
@@ -126,7 +126,7 @@
     }
 
     #newLeistungenWrapper {
-        padding: 2rem 0;
+        padding: 4rem 0;
     }
 
     .newLeistungen {
@@ -190,7 +190,6 @@
     #navigationBar_menu {
         display: flex;
         align-items: center;
-        height: 100%;
     }
 
     #navigationBar_menuItem {
@@ -198,10 +197,11 @@
         font-weight: 400;
         font-size: 1.1rem;
         height: 100%;
-        padding: 18px 20px;
+        padding: 15px 20px;
         display: flex;
         -ms-align-items: center;
         align-items: center;
+        border-radius: 5px;
     }
 
     #navigationBar_menuItem:hover {
@@ -252,8 +252,8 @@
 
     .header-leftBG {
         position: absolute;
-        top: 30px;
-        left: -150px;
+        top: 80px;
+        left: -120px;
         width: 400px;
         height: 400px;
         border-radius: 50%;
@@ -720,14 +720,11 @@
         display: flex;
     }
 
-    #contact > div {
-        width: 50%;
-    }
-
     .contactHeadline {
         position: relative;
         top: 0;
-        height: 400px;
+        width: 40%;
+        height: 500px;
         background-position: center;
     }
 
