--- a/style.css
+++ b/style.css
@@ -277,9 +277,7 @@ p {
     margin: 0 auto;
 }
 
-#header-left {
-    padding: 10px;
-}
+#header-left {}
 
 #header-left img {
     width: 100%;
@@ -378,6 +376,7 @@ p {
     background-color: white;
     //border-bottom: solid 4px rgba(0, 0, 0, 0.11);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.08);
+    box-shadow: 0 2px 13px rgba(0, 0, 0, 0.03);
 }
 
 .navigationBar_inner {
@@ -535,9 +534,11 @@ p {
 .physioHelpsCardHeadline {
     font-size: 1.5rem;
     color: var(--darkColour);
+    color: var(--ultraDarkColour);
     margin-bottom: .6rem;
-    font-weight: 500;
+    font-weight: 700;
     font-family: var(--mainFont);
+    letter-spacing: 1px;
 }
 
 .physioHelpsCardText {
@@ -545,7 +546,7 @@ p {
     font-weight: 400;
     line-height: 1.5rem;
     font-family: var(--secondFont);
-
+    color: var(--darkColour);
 }
 
 
@@ -616,6 +617,7 @@ p {
 #newLeistungenWrapper {
     width: 100%;
     overflow: hidden;
+    background-color: var(--lightColour);
 }
 
 .newLeistungen {
@@ -650,7 +652,7 @@ p {
     display: grid;
     gap: 50px;
     grid-template-columns: auto;
-    margin-top: 30px;
+    margin: 30px;
 }
 
 .newLeistungen-card {
@@ -662,6 +664,7 @@ p {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.31);
     cursor: pointer;
     overflow: hidden;
+    border-radius: 10px;
 }
 
 .newLeistungen-card img {
@@ -996,20 +999,28 @@ p {
     max-width: 100%;
 }
 
-#contact {
-    padding: 8px;
+#contactWrapper {
+    margin-bottom: 200px;
+    background-image: url(src/BG_edit.jpg);
+    background-size: cover;
+    background-position: 300px;
+}
 
-    background-color: var(--secondary);
+#contact {
+    //background-color: var(--ultraDarkColour);
+    background-color: rgba(11, 33, 79, 0.92);
+}
+
+.contactRight {
+    padding: 50px;
 }
 
 .contactHeadline {
-    background-image: url("src/contactImage.JPG");
+    background-image: url("src/frontDoor.JPG");
     background-size: cover;
     background-position: center;
-    height: 100px;
     width: 100%;
 
-    position: sticky;
     top: 8px;
 }
 
@@ -1019,8 +1030,18 @@ p {
     position: absolute;
     bottom: 0;
     left: 0;
-
     padding: 5px;
+}
+
+
+.contactRight {
+    width: 60%;
+    position: relative;
+}
+
+.contactRight h5 {
+    color: white;
+    font-weight: 400;
 }
 
 .headlineWrapper {
