--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ h5 {
     font-family: var(--mainFont);
     font-size: 2.2rem;
     line-height: 2.6rem;
-    font-weight: 700;
+    font-weight: 500;
     text-align: left;
 }
 
@@ -334,18 +334,23 @@ p {
 
 .moreButton {
     width: fit-content;
-    font-size: 1.1rem;
     background-color: var(--darkColour);
-    color: white;
     border: none;
     border-radius: 100px;
     cursor: pointer;
     margin: 30px 0 0 0;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.19);
-    padding: .5rem .5rem .5rem 1.5rem;
+    padding: .5rem .5rem .5rem 1.2rem;
     display: flex;
     align-items: center;
     gap: 1rem;
+    overflow: hidden;
+}
+
+.moreButton p {
+    color: white;
+    font-size: 1.1rem;
+    margin: 0;
 }
 
 .moreButton .icon {
@@ -495,7 +500,7 @@ p {
 
 #physioHelpsWrapper .line {
     background-color: var(--ultraDarkColour);
-    margin: .5rem 0 .8rem 0;
+    margin: 1rem 0 1.2rem 0;
 }
 
 .sectionImagePadding {
@@ -536,7 +541,7 @@ p {
     color: var(--darkColour);
     color: var(--ultraDarkColour);
     margin-bottom: .6rem;
-    font-weight: 700;
+    font-weight: 500;
     font-family: var(--mainFont);
     letter-spacing: 1px;
 }
@@ -544,7 +549,7 @@ p {
 .physioHelpsCardText {
     font-size: 1.1rem;
     font-weight: 400;
-    line-height: 1.5rem;
+    line-height: 1.4rem;
     font-family: var(--secondFont);
     color: var(--darkColour);
 }
@@ -659,26 +664,28 @@ p {
     font-size: 30px;
     text-align: center;
     width: 100%;
-    height: 300px;
+    //height: 300px;
     position: relative;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.31);
+    //box-shadow: 0 2px 5px rgba(0, 0, 0, 0.31);
     cursor: pointer;
     overflow: hidden;
-    border-radius: 10px;
 }
 
 .newLeistungen-card img {
     width: 100%;
-    height: 100%;
+    height: 80%;
     object-fit: cover;
+    border-radius: 3px;
 }
 
 .newLeistungen-cardText {
-    background-color: var(--ultraDarkColour);
+    //background-color: var(--ultraDarkColour);
+    color: var(--ultraDarkColour);
     font-family: var(--mainFont);
+    font-weight: 500;
     position: absolute;
     bottom: 0;
-    color: white;
+    //color: white;
 
     font-size: 1.1rem;
     padding: 8px;
@@ -1003,7 +1010,8 @@ p {
     margin-bottom: 200px;
     background-image: url(src/BG_edit.jpg);
     background-size: cover;
-    background-position: 300px;
+    background-attachment: fixed;
+    background-position: 200px;
 }
 
 #contact {
