--- a/tablet.css
+++ b/tablet.css
@@ -74,6 +74,23 @@
         max-height: 800px;
     }
 
+    .headerItemWrapper {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .headerItem {
+        background-color: white;
+        width: fit-content;
+        border-radius: 5px;
+        display: flex;
+        align-items: center;
+        gap: 1.2rem;
+        padding: 10px 15px;
+        margin: 1rem 0;
+        z-index: 1;
+    }
+
     .headerPictureCollection {
         position: absolute;
         bottom: 0;
@@ -134,11 +151,19 @@
 
     #header_headlineWrapper {}
 
-    #header_headlineWrapper h1,
+
+    #header_headlineWrapper h1 {
+        text-align: left;
+        text-shadow: none;
+        max-width: 450px;
+    }
+
     #header_headlineWrapper p {
         text-align: left;
         text-shadow: none;
-        max-width: 550px;
+        max-width: 450px;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     #header-emptyTop {
@@ -158,7 +183,6 @@
     }
 
     .physioHelps {
-        width: 80%;
         margin: 0 auto;
         padding: 0;
     }
@@ -174,29 +198,34 @@
     .physioHelpsCards {
         //flex-direction: row;
         justify-content: space-between;
-        width: 80%;
         margin: 4rem auto 0 auto;
-        max-width: 1400px;
         text-align: left;
     }
 
     .physioHelpsCard {
         //max-width: 360px;
-        padding: 1.5rem 1.5rem;
         margin: 0 auto;
         max-width: 100%;
     }
 
     #newLeistungenWrapper {}
 
-    .newLeistungen h5 {
-        text-align: left;
+    .newLeistungen {
+        gap: 50px;
     }
 
-    .newLeistungen .line {}
+    .newLeistungen h5 {
+        text-align: center;
+    }
+
+    .newLeistungen .line {
+        margin: 1rem auto;
+    }
 
     .newLeistungen p {
-        text-align: left;
+        text-align: center;
+        width: 80%;
+        margin: 0px auto;
     }
 
     .newLeistungen-card {
@@ -206,15 +235,6 @@
     .newLeistungenRight {
         width: 50%;
         margin: 0 auto;
-    }
-
-    .newLeistungenLeft {
-        width: 50%;
-        margin: 0 auto;
-    }
-
-    .newLeistungenLeft p {
-        margin: 0;
     }
 
     #leistungenWrapper {}
