--- a/animations.css
+++ b/animations.css
@@ -25,8 +25,7 @@
 
 .active {
     opacity: 1;
-    transition: opacity .5s ease-out, transform .6s ease-out;
-    transform: translateX(0);
+    transition: opacity .5s ease-out, transform .6s ease-out, background-color .1s linear;
     transform: translateY(0);
     transition-delay: 0s;
 }
