--- a/desktop.css
+++ b/desktop.css
@@ -37,7 +37,7 @@
 
     .navigationBar_inner {
 
-        width: var(--contentWidth);
+        //width: var(--contentWidth);
         max-width: var(--maxWidth);
         margin: 15px auto;
 
@@ -100,6 +100,10 @@
         max-width: var(--maxWidth);
         min-width: 1000px;
     }
+    
+    #header_headlineWrapper {
+        padding: 15px 15px;
+    }
 
     #header-emptyTop {
         width: 100%;
@@ -122,11 +126,6 @@
         justify-content: space-between;
         margin: 7rem auto 0 auto;
         width: 100%;
-    }
-
-    .physioHelpsCard {
-        display: flex;
-        flex-direction: column;
     }
 
     #newLeistungenWrapper {
@@ -156,6 +155,7 @@
 
     .newLeistungen-card {
         width: 260px;
+        height: 260px;
     }
 
     #logo {
@@ -197,6 +197,8 @@
     #navigationBar_menu {
         display: flex;
         align-items: center;
+        //justify-content: space-between;
+        width: 45%;
     }
 
     #navigationBar_menuItem {
@@ -255,26 +257,37 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
+        position: relative;
+    }
+    
+    #header-right {
+        width: 45%;
     }
 
     .header-leftBG {
         position: absolute;
-        top: 80px;
-        left: -120px;
         width: 400px;
         height: 400px;
         border-radius: 50%;
         background-color: rgba(23, 46, 96, 0.05);
+
+        position: absolute;
+        right: 300px;
+        top: 30px;
+        margin-inline: auto;
     }
 
     .header-leftBG2 {
         position: absolute;
         bottom: 30px;
-        left: 300px;
+        left: 280px;
         width: 400px;
         height: 400px;
         border-radius: 50%;
-        background-color: rgba(23, 46, 96, 0.03);
+        background-color: rgba(23, 46, 96, 0.05);
+
+        position: absolute;
+        margin-inline: auto;
 
     }
 
