--- a/tablet.css
+++ b/tablet.css
@@ -74,10 +74,6 @@
         max-height: 800px;
     }
 
-    .headerItemWrapper {
-        display: flex;
-        flex-direction: column;
-    }
 
     .headerItem {
         background-color: white;
@@ -131,7 +127,7 @@
         height: 100%;
 
         display: flex;
-        gap: 4rem;
+        justify-content: space-between;
     }
 
     #header-left {
@@ -147,6 +143,7 @@
         width: 50%;
         display: flex;
         align-items: center;
+
     }
 
     #header_headlineWrapper {}
@@ -195,17 +192,17 @@
         font-weight: 400;
     }
 
-    .physioHelpsCards {
+    .physioHelpsCard {
         //flex-direction: row;
         justify-content: space-between;
         margin: 4rem auto 0 auto;
-        text-align: left;
     }
 
     .physioHelpsCard {
         //max-width: 360px;
         margin: 0 auto;
         max-width: 100%;
+        text-align: center;
     }
 
     #newLeistungenWrapper {}
